# Arch-multi-session-dot-files

./: .gitignore  .profile  .tmux.conf  README.md  ascii-art.txt  bootstrap.sh  verify_packages.sh
.config/environment.d/: 99-custom-path.conf
.config/ghostty/: config
.config/gtk-3.0/: colors.css  gtk-3.0  settings.ini
.config/gtk-4.0/: settings.ini
.config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf  keybinds_hypr.txt  keybinds_hyprland.txt
.config/niri/: config.kdl  keybinds_niri.txt
.config/nvim/: lazy-lock.json  lazyvim.json
.config/rofi/: .current_wallpaper  0-shared-fonts.rasi  config-clipboard.rasi  config-launcher.rasi  config-radio.rasi  config-wallpaper.rasi  config.rasi
.config/rust-dotfiles/: config.toml.template  radio_favorites.json
.config/sway/: config  keybinds_sway.txt  swayidle.sh
.config/swaync/: config.json  style.css
.config/waybar/: Modules  ModulesCustom  ModulesGroups  ModulesVertical  ModulesWorkspaces  hyprConfig.jsonc.template  niriConfig.jsonc.template  style.css  swayConfig.jsonc.template
.config/wlogout/: style.css
docs/: MANUAL_INSTALL.md  POWER_MANAGEMENT.md
sysScripts/clip-manager/: Cargo.toml
sysScripts/cloudflare-toggle/: Cargo.toml
sysScripts/emoji-picker/: Cargo.toml
sysScripts/install-wizard/: Cargo.toml  pacman_list.txt
sysScripts/kb-launcher/: Cargo.toml
sysScripts/wallpaper-manager/: Cargo.toml
sysScripts/waybar-finance/: Cargo.toml  yahoo_debug_SCHO.json  yahoo_debug_TM.json
sysScripts/waybar-finance/src/: app.rs  config.rs  main.rs  network.rs  ui.rs
(+34 files in other folders)
